--- a/demos.creative-tim.com/paper-kit-2-pro/presentation.html
+++ b/demos.creative-tim.com/paper-kit-2-pro/presentation.html
@@ -32,7 +32,7 @@ Coded by www.creative-tim.com
   <link rel="canonical" href="https://www.creative-tim.com/product/paper-kit-2-pro" />
   <!--  Social tags      -->
   <meta name="keywords" content="bootstrap 4, bootstrap 4 uit kit, bootstrap 4 kit, paper, paper kit, creative tim, html kit, html css template, web template, bootstrap, bootstrap 4, css3 template, frontend, responsive bootstrap template, bootstrap ui kit, responsive ui kit, premium bootstrap 4 ui kit, premium template, bootstrap 4 template">
-  <meta name="description" content="Paper Kit 2 PRO is a premium Bootstrap 4 kit coded by Creative Tim. It is a beautiful cross-platform UI kit featuring over 1000 components, 34 sections and 11 example pages.">
+  <meta name="description" content="Cyber Team is a team of pubg 100 % safe hacker who can give you hacks free and paid">
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Paper Kit 2 Pro by Creative Tim">
   <meta itemprop="description" content="Paper Kit 2 PRO is a premium Bootstrap 4 kit coded by Creative Tim. It is a beautiful cross-platform UI kit featuring over 1000 components, 34 sections and 11 example pages.">
