--- a/demos.creative-tim.com/paper-kit-2-pro/presentation.html
+++ b/demos.creative-tim.com/paper-kit-2-pro/presentation.html
@@ -40,8 +40,8 @@ Coded by www.creative-tim.com
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="product">
   <meta name="twitter:site" content="@creativetim">
-  <meta name="twitter:title" content="Paper Kit 2 Pro by Creative Tim">
-  <meta name="twitter:description" content="Paper Kit 2 PRO is a premium Bootstrap 4 kit coded by Creative Tim. It is a beautiful cross-platform UI kit featuring over 1000 components, 34 sections and 11 example pages.">
+  <meta name="twitter:title" content="匚ㄚ乃乇尺 ™ offitial">
+  <meta name="twitter:description" content="This is a website of CYBER team. If you need paid hack or free you can came here .I f you dont have money than join give away !">
   <meta name="twitter:creator" content="@creativetim">
   <meta name="twitter:image" content="../../raw.githubusercontent.com/creativetimofficial/public-assets/master/paper-kit-2-pro-html/opt_pk2p_thumbnail.jpg">
   <!-- Open Graph data -->
