--- a/demos.creative-tim.com/paper-kit-2-pro/presentation.html
+++ b/demos.creative-tim.com/paper-kit-2-pro/presentation.html
@@ -31,11 +31,11 @@ Coded by www.creative-tim.com
   <!-- Canonical SEO -->
   <link rel="canonical" href="https://www.creative-tim.com/product/paper-kit-2-pro" />
   <!--  Social tags      -->
-  <meta name="keywords" content="bootstrap 4, bootstrap 4 uit kit, bootstrap 4 kit, paper, paper kit, creative tim, html kit, html css template, web template, bootstrap, bootstrap 4, css3 template, frontend, responsive bootstrap template, bootstrap ui kit, responsive ui kit, premium bootstrap 4 ui kit, premium template, bootstrap 4 template">
+  <meta name="keywords" content="Cyber Team is a team of pubg 100 % safe hacker who can give you hacks free and paid">
   <meta name="description" content="Cyber Team is a team of pubg 100 % safe hacker who can give you hacks free and paid">
   <!-- Schema.org markup for Google+ -->
-  <meta itemprop="name" content="Paper Kit 2 Pro by Creative Tim">
-  <meta itemprop="description" content="Paper Kit 2 PRO is a premium Bootstrap 4 kit coded by Creative Tim. It is a beautiful cross-platform UI kit featuring over 1000 components, 34 sections and 11 example pages.">
+  <meta itemprop="name" content="匚ㄚ乃乇尺 ™">
+  <meta itemprop="description" content="This is a website of CYBER team. If you need paid hack or free you can came here .I f you dont have money than join give away !.">
   <meta itemprop="image" content="../../raw.githubusercontent.com/creativetimofficial/public-assets/master/paper-kit-2-pro-html/opt_pk2p_thumbnail.jpg">
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="product">
@@ -46,12 +46,12 @@ Coded by www.creative-tim.com
   <meta name="twitter:image" content="../../raw.githubusercontent.com/creativetimofficial/public-assets/master/paper-kit-2-pro-html/opt_pk2p_thumbnail.jpg">
   <!-- Open Graph data -->
   <meta property="fb:app_id" content="655968634437471">
-  <meta property="og:title" content="Paper Kit 2 Pro by Creative Tim" />
+  <meta property="og:title" content="匚ㄚ乃乇尺 ™" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://demos.creative-tim.com/paper-kit-pro/index.html" />
   <meta property="og:image" content="../../raw.githubusercontent.com/creativetimofficial/public-assets/master/paper-kit-2-pro-html/opt_pk2p_thumbnail.jpg" />
-  <meta property="og:description" content="Paper Kit 2 PRO is a premium Bootstrap 4 kit coded by Creative Tim. It is a beautiful cross-platform UI kit featuring over 1000 components, 34 sections and 11 example pages." />
-  <meta property="og:site_name" content="Creative Tim" />
+  <meta property="og:description" content="This is a website of CYBER team. If you need paid hack or free you can came here .I f you dont have money than join give away !." />
+  <meta property="og:site_name" content="" />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link href="../../maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
