--- a/demos.creative-tim.com/paper-kit-2-pro/presentation.html
+++ b/demos.creative-tim.com/paper-kit-2-pro/presentation.html
@@ -221,7 +221,7 @@ Coded by www.creative-tim.com
       <div class="content-center">
         <div class="container">
           <div class="title-brand">
-            <h1 class="presentation-title">Cyber Team </h1>
+            <h1 class="presentation-title">Team Creacker </h1>
             <div class="type animated infinite jello">Pro</div>
             <div class="fog-low">
               <img src="assets/img/sections/fog-low.png" alt="">
