--- a/demos.creative-tim.com/paper-kit-2-pro/presentation.html
+++ b/demos.creative-tim.com/paper-kit-2-pro/presentation.html
@@ -230,7 +230,7 @@ Coded by www.creative-tim.com
               <img src="assets/img/sections/fog-low.png" alt="">
             </div>
           </div>
-          <h2 class="presentation-subtitle text-center">Make you world in your way with Cyber team !! </h2>
+          <h2 class="presentation-subtitle text-center">👑__R_A_V_I__👑 ki maki chut serf 200 rupe ma !!(offer for 3 days) </h2>
         </div>
       </div>
       <h6 class="category category-absolute">Get 100% antiban (click here) ==>
