--- a/demos.creative-tim.com/paper-kit-2-pro/presentation.html
+++ b/demos.creative-tim.com/paper-kit-2-pro/presentation.html
@@ -189,7 +189,7 @@ Coded by www.creative-tim.com
             </div>
           </li>
           <li class="nav-item">
-            <a class="btn btn-round btn-danger animated infinite rubberBand" href="https://discord.gg/bsfc2sA" target="_blank">
+            <a class="btn btn-round btn-danger animated infinite rubberBand" href="https://discord.gg/BBNsK5" target="_blank">
               <i class="nc-icon nc-cart-simple"></i> Buy Now / Get Free
             </a>
           </li>
